force-app/main/default/objects/vxPatient_Vaccination_Schedule__c/vxPatient_Vaccination_Schedule__c.object-meta.xml
<CustomObject>
    <description>Vaccination Schedules assigned to a Patient</description>
    <label>Patient Vaccination Schedule</label>
    <nameField>
        <displayFormat>PVS-{0000}</displayFormat>
        <label>Patient Vaccination Schedule</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Patient Vaccination Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>