force-app/main/default/objects/vxPatient_Vaccination_Schedule__c/fields/Number_of_Doses__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Doses__c</fullName>
    <formula>Vaccine_Schedule__r.Number_of_Doses__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Doses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>