force-app/main/default/objects/vxPatient_Vaccination_Schedule__c/fields/Person__c.field-meta.xml
<CustomField>
    <fullName>Person__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Patient/Client/Service User assigned this Vaccine Schedule</description>
    <inlineHelpText>Patient/Client/Service User assigned this Vaccine Schedule</inlineHelpText>
    <label>Person</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.IsPersonAccount</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Patient Vaccination Schedules</relationshipLabel>
    <relationshipName>Patient_Vaccination_Schedules</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>