force-app/main/default/objects/vxPatient_Vaccination_Schedule__c/fields/Schedule_Summary__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Summary__c</fullName>
    <description>Summary Patients Vaccine Schedule</description>
    <formula>Vaccine_Schedule__r.Name &amp; &quot; | &quot; &amp;  TEXT(Schedule_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Schedule Summary</label>
    <type>Text</type>
</CustomField>