force-app/main/default/objects/vxPatient_Vaccination_Schedule__c/fields/Vaccine_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Vaccine_Schedule__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Vaccine Schedule assigned to this person</description>
    <inlineHelpText>Vaccine Schedule assigned to this person</inlineHelpText>
    <label>Vaccine Schedule</label>
    <referenceTo>vxVaccine_Schedule__c</referenceTo>
    <relationshipLabel>Patient Vaccination Schedules</relationshipLabel>
    <relationshipName>Patient_Vaccination_Schedules</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>